force-app/main/default/objects/Bundle_Section__c/Bundle_Section__c.object-meta.xml
<CustomObject>
    <description>CPQ Product Feature</description>
    <label>Bundle Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>