force-app/main/default/objects/Bundle_Section__c/fields/Configured_SKU__c.field-meta.xml
<CustomField>
    <fullName>Configured_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configured SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Bundle_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>