force-app/main/default/objects/Bundle_Section__c/fields/Max_Options__c.field-meta.xml
<CustomField>
    <fullName>Max_Options__c</fullName>
    <inlineHelpText>Maximum number of options for this feature that can be selected as part of the product bundle.</inlineHelpText>
    <label>Max Options</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>