force-app/main/default/objects/Bundle_Section__c/fields/Min_Options__c.field-meta.xml
<CustomField>
    <fullName>Min_Options__c</fullName>
    <inlineHelpText>Minimum number of options for this feature that can be selected as part of the product bundle.</inlineHelpText>
    <label>Min Options</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>