force-app/main/default/objects/Bundle_Section__c/fields/Section_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>Section_Call_Out__c</fullName>
    <label>Section Call Out</label>
    <type>TextArea</type>
</CustomField>