force-app/main/default/objects/Bundle_Section__c/fields/Section_Description__c.field-meta.xml
<CustomField>
    <fullName>Section_Description__c</fullName>
    <label>Section Description</label>
    <type>TextArea</type>
</CustomField>